--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "epxress": "0.0.1-security",
     "moment": "^2.29.1",
     "nodemon": "^2.0.7",
+    "papaparse": "^5.4.1",
     "react": "^17.0.1",
     "react-chat-plugin": "^0.1.17",
     "react-dom": "^17.0.1",
